public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1290/source/compile
source.c: In function ‘main’:
source.c:6:7: error: expected identifier or ‘(’ before ‘;’ token
 int N,;
       ^
